syntax = "proto3";

package ggezchain.trade;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "ggezchain/trade/params.proto";
import "ggezchain/trade/trade_index.proto";
import "ggezchain/trade/stored_trade.proto";
import "ggezchain/trade/stored_temp_trade.proto";

option go_package = "github.com/GGEZLabs/ggezchain/x/trade/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/GGEZLabs/ggezchain/trade/params";
  
  }
  
  // Queries a TradeIndex by index.
  rpc TradeIndex (QueryGetTradeIndexRequest) returns (QueryGetTradeIndexResponse) {
    option (google.api.http).get = "/GGEZLabs/ggezchain/trade/trade_index";
  
  }
  
  // Queries a list of StoredTrade items.
  rpc StoredTrade    (QueryGetStoredTradeRequest) returns (QueryGetStoredTradeResponse) {
    option (google.api.http).get = "/GGEZLabs/ggezchain/trade/stored_trade/{tradeIndex}";
  
  }
  rpc StoredTradeAll (QueryAllStoredTradeRequest) returns (QueryAllStoredTradeResponse) {
    option (google.api.http).get = "/GGEZLabs/ggezchain/trade/stored_trade";
  
  }
  
  // Queries a list of StoredTempTrade items.
  rpc StoredTempTrade    (QueryGetStoredTempTradeRequest) returns (QueryGetStoredTempTradeResponse) {
    option (google.api.http).get = "/GGEZLabs/ggezchain/trade/stored_temp_trade/{tradeIndex}";
  
  }
  rpc StoredTempTradeAll (QueryAllStoredTempTradeRequest) returns (QueryAllStoredTempTradeResponse) {
    option (google.api.http).get = "/GGEZLabs/ggezchain/trade/stored_temp_trade";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetTradeIndexRequest {}

message QueryGetTradeIndexResponse {
  TradeIndex TradeIndex = 1 [(gogoproto.nullable) = false];
}

message QueryGetStoredTradeRequest {
  uint64 tradeIndex = 1;
}

message QueryGetStoredTradeResponse {
  StoredTrade storedTrade = 1 [(gogoproto.nullable) = false];
}

message QueryAllStoredTradeRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllStoredTradeResponse {
  repeated StoredTrade                            storedTrade = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination  = 2;
}

message QueryGetStoredTempTradeRequest {
  uint64 tradeIndex = 1;
}

message QueryGetStoredTempTradeResponse {
  StoredTempTrade storedTempTrade = 1 [(gogoproto.nullable) = false];
}

message QueryAllStoredTempTradeRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllStoredTempTradeResponse {
  repeated StoredTempTrade                        storedTempTrade = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination      = 2;
}

